@@ -237,6 +237,9 @@ Changes on 1.2.0 since 1.1.0:
     bar mode is applied to windows opened after change, the same way as
     the side bar change is applied.
 
+* Added optional 'New Window' button to the toolbar left to 'New Tab' one
+    to those who don't like tabbed view.
+
 
 Changes on 1.1.0 since 1.0.1:
 
